# kiwi

./: .clang-format  .gitignore  .gitmodules  Android.mk  CMakeLists.txt  KiWi.vcxproj  KiWiConfig.cmake.in  LICENSE  README.md  ROADMAP.md
.github/workflows/: main.yml
assets/: CMakeLists.txt
assets/fonts/: CMakeLists.txt
assets/tilesets/: CMakeLists.txt
cmake/: kiwi-config.cmake  kiwi-cpack.cmake  setup-exports.cmake
cmake-modules/: FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_ttf.cmake
examples/: CMakeLists.txt
examples/checkbox-radio/: CMakeLists.txt  checkbox-radio.c
examples/custom-render/: CMakeLists.txt  custom-render.c
examples/debug-gizmos/: CMakeLists.txt  debug-gizmos.c
examples/drag/: CMakeLists.txt  drag.c
examples/editbox/: CMakeLists.txt  editbox.c
examples/fonts/: COPYING
examples/frame-family/: CMakeLists.txt  frame-family.c
examples/label/: CMakeLists.txt  label.c
examples/playground/: CMakeLists.txt  playground.c
examples/scrollbox/: CMakeLists.txt  scrollbox.c
examples/styleswitcher/: CMakeLists.txt  styleswitcher.c  styleswitcher.xcf
examples/tileset/: README  tileset.xcf
include/: core.h  widgets.h
include/core/: eventwatcher.h  gui.h  renderdriver.h  renderdriver_sdl2.h  utf8.h  widget.h
include/kiwi/: core.h  widgets.h
include/kiwi/core/: bool.h  color.h  driver.h  eventwatcher.h  gui.h  input-event.h  input-key.h  old-renderdriver-sdl2.h  old-renderdriver.h  rect.h  renderdriver-sdl2.h  renderdriver.h  renderdriver_sdl2.h  tilerenderer.h  utf8.h  widget.h
include/kiwi/drivers/sdl2/: sdl2-driver.h
include/kiwi/widgets/: button.h  checkbox.h  editbox.h  frame.h  label.h  scrollbox.h  toggle.h
include/widgets/: button.h  checkbox.h  editbox.h  frame.h  label.h  scrollbox.h  toggle.h
resources/: kiwires.cmake
src/: .KW_widget.h.kate-swp  CMakeLists.txt  GUI_button.c  GUI_button.h  GUI_button_internal.h  GUI_eventwatcher.c  GUI_eventwatcher.h  GUI_frame.c  GUI_frame.h  GUI_gui.c  GUI_gui.h  GUI_gui_internal.h  GUI_label.c  GUI_label.h  GUI_label_internal.h  GUI_macros.h  GUI_textrenderer.c  GUI_textrenderer.h  GUI_tilerenderer.c  GUI_tilerenderer.h  GUI_widget.c  GUI_widget.h  GUI_widget_internal.h  KW_bool.h  KW_button.c  KW_button.h  KW_button_internal.h  KW_checkbox.c  KW_checkbox.h  KW_checkbox_internal.c  KW_checkbox_internal.h  KW_editbox.c  KW_editbox.h  KW_editbox_internal.c  KW_editbox_internal.h  KW_eventwatcher.c  KW_eventwatcher.h  KW_frame.c  KW_frame.h  KW_frame_internal.c  (+64 more)
src/core/: CMakeLists.txt  eventwatcher.c  gui.c  gui_internal.h  rect.c  renderdriver.c  renderdriver_sdl2.c  tilerenderer.c  utf8.c  widget.c  widget_internal.h
src/examples/: CMakeLists.txt
src/examples/assets/: CMakeLists.txt
src/examples/assets/tilesets/: CMakeLists.txt
src/examples/src/: CMakeLists.txt  label.c
src/kiwi/: CMakeLists.txt
src/kiwi/core/: CMakeLists.txt  driver.c  eventwatcher.c  gui-internal.c  gui-internal.h  gui.c  gui_internal.h  old-renderdriver-sdl2.c  old-renderdriver.c  rect.c  renderdriver-sdl2.c  renderdriver.c  renderdriver_sdl2.c  tilerenderer.c  utf8.c  widget-eventhandlers.c  widget-internal.h  widget.c
src/kiwi/drivers/: CMakeLists.txt
src/kiwi/drivers/sdl2/: CMakeLists.txt  sdl2-driver-internal.h  sdl2-driver.c  sdl2-font.c  sdl2-font.h  sdl2-memory.c  sdl2-memory.h  sdl2-texture.c  sdl2-texture.h  sdl2-update.c  sdl2-update.h
src/kiwi/widgets/: CMakeLists.txt  button-internal.h  button.c  checkbox.c  editbox-internal.c  editbox-internal.h  editbox.c  editbox_internal.c  frame-internal.c  frame-internal.h  frame.c  frame_internal.c  label-internal.c  label-internal.h  label.c  label_internal.c  label_internal.h  scrollbox-internal.c  scrollbox-internal.h  scrollbox.c  scrollbox_internal.c  scrollbox_internal.h  toggle.c
src/widgets/: CMakeLists.txt  button.c  button_internal.h  checkbox.c  editbox.c  editbox_internal.c  editbox_internal.h  frame.c  frame_internal.c  frame_internal.h  label.c  label_internal.c  label_internal.h  scrollbox.c  scrollbox_internal.c  scrollbox_internal.h  toggle.c
